--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@reduxjs/toolkit": "^2.2.4",
     "@storybook/manager-api": "^8.0.10",
     "@storybook/theming": "^8.0.10",
     "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "zod": "^3.23.4"
   },
