--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@reduxjs/toolkit": "^2.2.4",
+    "@reduxjs/toolkit": "^2.2.5",
     "@storybook/manager-api": "^8.0.10",
     "@storybook/theming": "^8.0.10",
+    "async-mutex": "^0.5.0",
     "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
