--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.51.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5",
     "zod": "^3.23.4"
   },
   "devDependencies": {
